приводит элементы списка к единому стилю

--- a/source/improvement-fork-1.html
+++ b/source/improvement-fork-1.html
@@ -10,7 +10,7 @@
   <main>
     <section class="area-improvement section">
       <div class="container">
-        <a class="area-improvement__back back-btn" href="main-page.html">
+        <a class="area-improvement__back-btn back-btn" href="main-page.html">
           <svg width="8" height="14">
             <use xlink:href="img/sprite.svg#icon-triangle-arrow"></use>
           </svg>
@@ -24,7 +24,7 @@
           <div class="improvement-stage__container">
             <div class="improvement-stage__wrapper">
               <span>Статус:</span>
-              <span class="improvement-stage__status">Идет прием заявок</span>
+              <span class="improvement-stage__status improvement-stage__status--orange">Идет прием заявок</span>
             </div>
             <div class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
               <span>Приём заявок&nbsp;</span>
