--- a/source/improvement-list.html
+++ b/source/improvement-list.html
@@ -49,7 +49,7 @@
                   <div class="improvement-stage__container">
                     <div class="improvement-stage__wrapper">
                         <span>Статус:</span>
-                        <span class="improvement-stage__status improvement-stage__status--opened">Голосование открыто</span>
+                        <span class="improvement-stage__status improvement-stage__status--blue">Голосование открыто</span>
                     </div>
                     <div class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
                         <span>Период голосования:&nbsp;</span>
@@ -101,12 +101,12 @@
                   </li>
                   <li class="proposal-list__item">
                     <div class="proposal-list__wrapper">
-                      <a class="proposal-list__address">
+                      <div class="proposal-list__address">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.9624 1.64129C10.904 0.582939 9.49678 0 8.00014 0C6.50319 0 5.09625 0.582939 4.0379 1.64129C2.07929 3.59961 1.83588 7.28426 3.51077 9.51666L8.00014 16L12.4828 9.52572C14.1644 7.28426 13.921 3.59961 11.9624 1.64129ZM8.05186 7.5972C6.92426 7.5972 6.00645 6.6794 6.00645 5.5518C6.00645 4.4242 6.92426 3.5064 8.05186 3.5064C9.17946 3.5064 10.0973 4.4242 10.0973 5.5518C10.0973 6.6794 9.17946 7.5972 8.05186 7.5972Z" fill="currentColor"></path>
                         </svg>
                         <span>Константина Симонова, 5к2</span>
-                      </a>
+                      </div>
                     </div>
                     <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter js-like-counter">
@@ -120,12 +120,12 @@
                   </li>
                   <li class="proposal-list__item">
                     <div class="proposal-list__wrapper">
-                      <a class="proposal-list__address">
+                      <div class="proposal-list__address">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.9624 1.64129C10.904 0.582939 9.49678 0 8.00014 0C6.50319 0 5.09625 0.582939 4.0379 1.64129C2.07929 3.59961 1.83588 7.28426 3.51077 9.51666L8.00014 16L12.4828 9.52572C14.1644 7.28426 13.921 3.59961 11.9624 1.64129ZM8.05186 7.5972C6.92426 7.5972 6.00645 6.6794 6.00645 5.5518C6.00645 4.4242 6.92426 3.5064 8.05186 3.5064C9.17946 3.5064 10.0973 4.4242 10.0973 5.5518C10.0973 6.6794 9.17946 7.5972 8.05186 7.5972Z" fill="currentColor"></path>
                         </svg>
                         <span>Константина Симонова, 5к2</span>
-                      </a>
+                      </div>
                     </div>
                     <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter js-like-counter">
@@ -139,12 +139,12 @@
                   </li>
                   <li class="proposal-list__item">
                     <div class="proposal-list__wrapper">
-                      <a class="proposal-list__address">
+                      <div class="proposal-list__address">
                         <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M11.9624 1.64129C10.904 0.582939 9.49678 0 8.00014 0C6.50319 0 5.09625 0.582939 4.0379 1.64129C2.07929 3.59961 1.83588 7.28426 3.51077 9.51666L8.00014 16L12.4828 9.52572C14.1644 7.28426 13.921 3.59961 11.9624 1.64129ZM8.05186 7.5972C6.92426 7.5972 6.00645 6.6794 6.00645 5.5518C6.00645 4.4242 6.92426 3.5064 8.05186 3.5064C9.17946 3.5064 10.0973 4.4242 10.0973 5.5518C10.0973 6.6794 9.17946 7.5972 8.05186 7.5972Z" fill="currentColor"></path>
                         </svg>
                         <span>Константина Симонова, 5к2</span>
-                      </a>
+                      </div>
                     </div>
                     <a href="#" class="proposal-list__title">Рыбным текстом называется текст, служащий для временного наполнения макета в публикациях</a>
                     <div class="proposal-list__like-counter js-like-counter">
