--- a/source/improvement-moderating.html
+++ b/source/improvement-moderating.html
@@ -25,7 +25,7 @@
                   <div class="improvement-stage__container">
                     <div class="improvement-stage__wrapper">
                         <span>Статус:</span>
-                        <span class="improvement-stage__status">Идет прием заявок</span>
+                        <span class="improvement-stage__status improvement-stage__status--orange">Идет прием заявок</span>
                     </div>
                     <div class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
                         <span>Приём заявок&nbsp;</span>
@@ -58,7 +58,7 @@
                       </div>
                     </div>
                     <a href="#" class="proposal-list__title">Рыбным текстом называется для временного</a>
-                    <span class="proposal-list__status">Ожидает модерации</span>
+                    <span class="proposal-list__status proposal-list__status--blue">Ожидает модерации</span>
                   </li>
                 </ul>
 
