--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -29,7 +29,6 @@
             <span>Рейтингование будет запущено в&nbsp;период с&nbsp;<time
                 datetime="2020-08-20">20.08.2020</time> по <time
                 datetime="2020-11-20">20.11.2020</time></span>
-          </p>
         </div>
       </div>
 
@@ -287,82 +286,83 @@
           доступен в&nbsp;разделе
           <a class="link link--blue link--underline" href="#">Моя активность</a>
 
-        <ul class="your-projects__list">
-          <li class="your-projects__item">
-            <h3 class="your-projects__title">
-              <span class="your-projects__icon">
+        <ul class="your-projects-list">
+          <li class="your-projects-list__item">
+            <h3 class="your-projects-list__title">
+              <span class="your-projects-list__icon">
                 <svg width="28" height="32" viewBox="0 0 28 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-water-service"></use>
                 </svg>
               </span>
-              <span class="your-projects__name">Водоснабжение</span>
+              <span class="your-projects-list__name">Водоснабжение</span>
             </h3>
-            <ul class="your-projects__inner-list">
-              <li class="your-projects__inner-item">
-                <a class="your-projects__inner-link project-link"
+            <ul class="your-projects-list__inner-list">
+              <li class="your-projects-list__inner-item">
+                <a class="your-projects-list__inner-link project-link"
                   href="#">Рыбным текстом
                   называется
                   текст, служащий для временного наполнения макета в
                   публикациях</a>
                 <span
-                  class="your-projects__inner-status project-status project-status--blue">Ожидает
+                  class="your-projects-list__inner-status project-status project-status--blue">Ожидает
                   модерации</span>
               </li>
-              <li class="your-projects__inner-item">
-                <a class="your-projects__inner-link project-link"
+              <li class="your-projects-list__inner-item">
+                <a class="your-projects-list__inner-link project-link"
                   href="#">Cлужащий для
                   временного
                   наполнения макета в публикациях или производстве веб-сайтов,
                   пока финальный текст еще</a>
                 <span
-                  class="your-projects__inner-status project-status project-status--orange">Требует
+                  class="your-projects-list__inner-status project-status project-status--orange">Требует
                   доработки</span>
               </li>
             </ul>
           </li>
-          <li class="your-projects__item">
-            <h3 class="your-projects__title">
-              <span class="your-projects__icon">
+          <li class="your-projects-list__item">
+            <h3 class="your-projects-list__title">
+              <span class="your-projects-list__icon">
                 <svg width="22" height="28" viewBox="0 0 22 28" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <use xlink:href="img/sprite.svg#icon-category-8"></use>
                 </svg>
               </span>
-              <span class="your-projects__name">ЖКХ</span>
+              <span class="your-projects-list__name">ЖКХ</span>
             </h3>
-            <ul class="your-projects__inner-list">
-              <li class="your-projects__inner-item">
-                <a class="your-projects__inner-link project-link"
+            <ul class="your-projects-list__inner-list">
+              <li class="your-projects-list__inner-item">
+                <a class="your-projects-list__inner-link project-link"
                   href="#">Рыбный текст также
                   известен
                   как текст- заполнитель или же текст-наполнитель</a>
                 <span
-                  class="your-projects__inner-status project-status project-status--green">Одобрено</span>
+                  class="your-projects-list__inner-status project-status project-status--green">Одобрено</span>
               </li>
-              <li class="your-projects__inner-item">
-                <a class="your-projects__inner-link project-link"
+              <li class="your-projects-list__inner-item">
+                <a class="your-projects-list__inner-link project-link"
                   href="#">Рыбным текстом
                   называется
                   текст, служащий для временного наполнения макета в
                   публикациях</a>
                 <span
-                  class="your-projects__inner-status project-status project-status--red">Отклонено</span>
+                  class="your-projects-list__inner-status project-status project-status--red">Отклонено</span>
               </li>
-              <li class="your-projects__inner-item">
-                <a class="your-projects__inner-link project-link" href="#">По
+              <li class="your-projects-list__inner-item">
+                <a class="your-projects-list__inner-link project-link"
+                  href="#">По
                   причине своей
                   функции
                   текста- заполнителя для макетов нечитабельность рыбных текстов
                   имеет особое значение</a>
                 <span
-                  class="your-projects__inner-status project-status project-status--green">Одобрено</span>
+                  class="your-projects-list__inner-status project-status project-status--green">Одобрено</span>
               </li>
             </ul>
           </li>
         </ul>
-        </p>
       </section>
+
     </div>
   </main>
 
