--- a/source/activity-rating.html
+++ b/source/activity-rating.html
@@ -67,7 +67,8 @@
                   fill="inherit" />
               </svg>
             </button>
-            <button class="button-like is-selected" type="button">
+            <button class="button-like button-like--dislike is-selected"
+              type="button">
               <span>920</span>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -106,7 +107,8 @@
                   fill="inherit" />
               </svg>
             </button>
-            <button class="button-like is-selected" type="button">
+            <button class="button-like button-like--dislike is-selected"
+              type="button">
               <span>120</span>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -165,7 +167,8 @@
                   fill="inherit" />
               </svg>
             </button>
-            <button class="button-like is-selected" type="button">
+            <button class="button-like button-like--dislike is-selected"
+              type="button">
               <span>120</span>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -218,7 +221,8 @@
                   fill="inherit" />
               </svg>
             </button>
-            <button class="button-like is-selected" type="button">
+            <button class="button-like button-like--dislike is-selected"
+              type="button">
               <span>120</span>
               <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
