заменяет классы для цвета статусов на глобальные

--- a/source/improvement-fork-1.html
+++ b/source/improvement-fork-1.html
@@ -24,7 +24,7 @@
           <div class="improvement-stage__container">
             <div class="improvement-stage__wrapper">
               <span>Статус:</span>
-              <span class="improvement-stage__status improvement-stage__status--orange">Идет прием заявок</span>
+              <span class="improvement-stage__status status-color--orange">Идет прием заявок</span>
             </div>
             <div class="improvement-stage__wrapper improvement-stage__wrapper--line-height">
               <span>Приём заявок&nbsp;</span>
