--- a/source/improvement-moderating.html
+++ b/source/improvement-moderating.html
@@ -42,7 +42,7 @@
                   </p>
                 </div>
                 <ul class="area-improvement__proposal proposal-list">
-                  <li class="area-improvement__proposal proposal-list__item proposal-list__item--border-top">
+                  <li class="proposal-list__item proposal-list__item--border-top">
                     <div class="proposal-list__wrapper">
                       <div class="proposal-list__account">
                         <svg width="16" height="16">
