Вносит правки в адаптив Рейтингование 7

--- a/source/rating-main-2.html
+++ b/source/rating-main-2.html
@@ -86,9 +86,9 @@
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
-                <svg width=32 height="32" viewBox="0 0 32 32" fill="none"
+                <svg width="28" height="26" viewBox="0 0 28 26" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-cultural-objects"></use>
+                  <use xlink:href="img/sprite.svg#icon-category-12"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Муниципальные образовательные
@@ -101,9 +101,9 @@
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                <svg width="24" height="26" viewBox="0 0 24 26" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-cheild"></use>
+                  <use xlink:href="img/sprite.svg#icon-category-2"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Благоустройство</span>
@@ -115,9 +115,9 @@
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
-                <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
+                <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-fire"></use>
+                  <use xlink:href="img/sprite.svg#icon-category-13"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Народное творчество</span>
@@ -126,12 +126,13 @@
               </div>
             </a>
           </li>
-          <li class="rating-main__item rating-main__item--service">
+          <li
+            class="rating-main__item rating-main__item--service rating-main__item--no-vote">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
-                <svg width="22" height="28" viewBox="0 0 22 28" fill="none"
+                <svg width="26" height="26" viewBox="0 0 26 26" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-category-8"></use>
+                  <use xlink:href="img/sprite.svg#icon-category-3"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Бытовое обслуживание</span>
@@ -145,7 +146,7 @@
               <span class="rating-main__icon">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-ball"></use>
+                  <use xlink:href="img/sprite.svg#icon-culture"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Объекты культурного
@@ -174,7 +175,7 @@
               <span class="rating-main__icon">
                 <svg width=32 height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-cultural-objects"></use>
+                  <use xlink:href="img/sprite.svg#icon-culture"></use>
                 </svg>
               </span>
               <span class="rating-main__title">Объекты культуры</span>
@@ -207,7 +208,8 @@
         </button>
       </section>
 
-      <section class="raitint-main__project-list">
+      <section class="rating-main__project-list">
+        <h2 class="visually-hidden">Список добавленных проектов</h2>
         <ul class="rating-list">
           <li class="rating-list__item rating-list__item--my-progect">
             <div class="rating-list__content">
