исправляет работу формы загрузки изображений

--- a/source/proposal-warning.html
+++ b/source/proposal-warning.html
@@ -139,7 +139,7 @@
             </div>
             <div class="landscaping-form__button-wrapper">
               <button class="button button--white">Отменить</button>
-              <button type="submit" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
+              <button type="button" class="button button--blue landscaping-form__submit-btn" id="improvement-submit-btn">
                 Отправить на модерацию
               </button>
             </div>
@@ -237,6 +237,7 @@
       </form>
     </div>
 
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=a3b13bbc-c623-4647-90d4-48210288fe0d" type="text/javascript"></script>
     <script src="js/libs.js"></script>
     <script src="js/main.min.js"></script>
   </body>
