Вносит правки по баглисту

--- a/source/rating-main-3.html
+++ b/source/rating-main-3.html
@@ -68,7 +68,8 @@
           за&nbsp;проекты, указанное ниже количество раз для каждой категории
         </p>
 
-        <ul class="rating-main__list rating-main__list--vote js_short_list">
+        <ul
+          class="rating-main__list rating-main__list--vote rating-main__list--active js_short_list">
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
@@ -147,7 +148,8 @@
               </div>
             </a>
           </li>
-          <li class="rating-main__item rating-main__item--service">
+          <li
+            class="rating-main__item rating-main__item--service rating-main__item--is-active">
             <a href="#" class="rating-main__link">
               <span class="rating-main__icon">
                 <svg width="26" height="25" viewBox="0 0 26 25" fill="none"
