--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -27,7 +27,7 @@
 
           <p class="status-info__text">
             <span>Рейтингование будет запущено в&nbsp;период с&nbsp;<time
-                datetime="2020-08-20">20.08.2020</time> по <time
+                datetime="2020-08-20">20.08.2020</time> по&nbsp;<time
                 datetime="2020-11-20">20.11.2020</time></span>
         </div>
       </div>
@@ -285,6 +285,7 @@
           только одобренные проекты, полный список поданных вами проектов
           доступен в&nbsp;разделе
           <a class="link link--blue link--underline" href="#">Моя активность</a>
+        </p>
 
         <ul class="your-projects-list">
           <li class="your-projects-list__item">
