--- a/source/project-form-2.html
+++ b/source/project-form-2.html
@@ -171,9 +171,11 @@
             <p>Если необходимо, вы можете загрузить изображения. Максимум 5&nbsp;изображенний, формата JPEG, PNG, GIF.
             </p>
             <div class="image-uploads__wrapper js-upload-image-container">
-              <input class="visually-hidden" type="file" name="user-images" id="user-images"
-                accept="image/png, image/jpeg, image/jpg, image/gif" multiple>
-              <label for="user-images"><span>Загрузить изображение</span></label>
+              <div class="image-uploads__image-wrapper">
+                <input class="visually-hidden" type="file" name="user-images"
+                  accept="image/png, image/jpeg, image/jpg, image/gif" aria-label="user-images">
+                <span>Загрузить изображение</span>
+              </div>
             </div>
           </div>
           <div class="new-project__button-wrapper">
