исправляет баги из клиентского листа

--- a/source/service-unavailable.html
+++ b/source/service-unavailable.html
@@ -14,7 +14,7 @@
             <div class="unavailable__content-wrapper">
               <h1 class="unavailable__title page-title page-title--project">Сервис недоступен</h1>
               <p class="unavailable__text">Сайт не может обработать этот запрос. Мы&nbsp;знаем&nbsp;о&nbsp;проблеме и работаем над ее решением. Приносим свои извинения за доставленные неудобства!</p>
-              <a href="#" class="unavailable__refresh-link article-link article-link--no-chain">Попробуйте обновить страницу позже</a>
+              <span class="unavailable__refresh article-link article-link--no-chain">Попробуйте обновить страницу позже</span>
               <a href="main.html" class="unavailable__button button button--blue page-404__button">ПЕРЕЙТИ НА ГЛАВНУЮ</a>
             </div>
             <div class="unavailable__image-wrapper">
