фиксы по клиентскому баглисту

--- a/source/rating-main.html
+++ b/source/rating-main.html
@@ -96,7 +96,7 @@
             </a>
           </li>
           <li class="rating-main__item rating-main__item--service">
-            <a href="#" class="rating-main__link">
+            <div class="rating-main__link">
               <span class="rating-main__icon">
                 <svg width=32 height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -109,8 +109,8 @@
                 <span>из</span>
                 <span class="rating-main__quantity">12</span>
               </div>
-              <span class="rating-main__hover-text">+ Добавить проект</span>
-            </a>
+              <span class="rating-main__hover-text">Количество проектов исчерпано</span>
+            </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
@@ -129,9 +129,8 @@
               <span class="rating-main__hover-text">+ Добавить проект</span>
             </a>
           </li>
-          <li
-            class="rating-main__item rating-main__item--service rating-main__item--is-done">
-            <a href="#" class="rating-main__link">
+          <li class="rating-main__item rating-main__item--service">
+            <div class="rating-main__link">
               <span class="rating-main__icon">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -144,9 +143,10 @@
                 <span>из</span>
                 <span class="rating-main__quantity">2</span>
               </div>
-              <span class="rating-main__hover-text">Количество
+              <span
+                class="rating-main__hover-text rating-main__hover-text--is-done">Количество
                 проектов исчерпано</span>
-            </a>
+            </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
@@ -200,7 +200,7 @@
             </a>
           </li>
           <li class="rating-main__item rating-main__item--service">
-            <a href="#" class="rating-main__link">
+            <div class="rating-main__link">
               <span class="rating-main__icon">
                 <svg width=32 height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -213,8 +213,8 @@
                 <span>из</span>
                 <span class="rating-main__quantity">12</span>
               </div>
-              <span class="rating-main__hover-text">+ Добавить проект</span>
-            </a>
+              <span class="rating-main__hover-text">Количество проектов исчерпано</span>
+            </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
@@ -234,7 +234,7 @@
             </a>
           </li>
           <li class="rating-main__item rating-main__item--service">
-            <a href="#" class="rating-main__link">
+            <div class="rating-main__link">
               <span class="rating-main__icon">
                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -250,7 +250,7 @@
               <span
                 class="rating-main__hover-text rating-main__hover-text--is-done">Количество
                 проектов исчерпано</span>
-            </a>
+            </div>
           </li>
           <li class="rating-main__item rating-main__item--service">
             <a href="#" class="rating-main__link">
