--- a/source/single-rating-page-3.html
+++ b/source/single-rating-page-3.html
@@ -8,11 +8,9 @@
   <include src="source/components/header.html"></include>
 
   <main class="project-page page-content project-page--single-page-rating">
-    <div class="container">
-    </div>
 
     <div class="container">
-      <div class="info-banner info-banner--rejected">
+      <div class="info-banner info-banner--approved">
         <svg width="24" height="24" class="info-icon info-banner__icon"
           xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
           <path fill="currentColor" fill-rule="evenodd"
@@ -25,37 +23,19 @@
         </svg>
 
         <p class="info-banner__title">
-          Проект отклонен
+          Отправлено на модерацию
         </p>
 
         <p class="info-banner__text">
           Ваш проект отправлен на модерацию, с Вами свяжется модератор
         </p>
       </div>
-
     </div>
 
     <div class="container container--desktop-only">
       <article class="content">
         <h1>Государственное дошкольное образовательное
           учреждение Тульской области &laquo;Узловский детский сад&raquo;</h1>
-
-        <div class="project-page__rejected-info">
-          <a href="#" class="link link--blue link--time">
-            <svg width="24" height="24" xmlns=" http://www.w3.org/2000/svg"
-              fill="none" viewBox="0 0 24 24">
-              <path fill="currentColor" fill-rule="evenodd"
-                d="M.2 12C.2 5.494 5.492.2 12 .2 18.505.2 23.8 5.494 23.8 12c0 6.506-5.294 11.8-11.8 11.8C5.492 23.8.2 18.506.2 12zm2.152 0c0 5.32 4.328 9.647 9.647 9.647 5.32 0 9.647-4.327 9.647-9.647S17.318 2.354 12 2.354 2.352 6.68 2.352 12z"
-                clip-rule="evenodd"></path>
-              <rect width="2.5" height="8" x="10.75" y="6" fill="currentColor"
-                rx="1"></rect>
-              <rect width="2.5" height="3" x="10.75" y="15" fill="currentColor"
-                rx="1"></rect>
-            </svg>
-            <span>Правила размещения проектов</span>
-          </a>
-        </div>
-
 
         <div class="project-page__container" data-sticky-container>
           <div class="project-page__meta project-meta">
